html layout using iframe table link and forms done

--- a/index.html
+++ b/index.html
@@ -6,6 +6,35 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Welcome to github account</h2>
+ <table border="1" width="100%">
+    <thead></thead>
+    <tbody>
+<tr>
+    <td colspan="2">This is my header</td>
+</tr>
+<tr> 
+      <td>
+       <a href="login.html" target="myframe">login</a>
+       <br><br>
+       <a href="registration.html" target="myframe">login</a>
+      
+
+      </td>
+
+    <td>Vertical menu part</td>
+    <td>
+        <iframe name="myframe" height="300" width="800" src="./images/OIP.jpeg"></iframe>
+    </td>
+</tr>
+<tr>
+    <td colspan="2">This is my footer</td>
+</tr>
+
+
+
+
+    </tbody>
+    <tfoot></tfoot>
+ </table>
 </body>
 </html>
