--- a/CSSWork/index.html
+++ b/CSSWork/index.html
@@ -7,15 +7,13 @@
     <link href="style.css" rel="stylesheet" >
 </head>
 <body>
-    <div class="container">
-      <p>Paragraph1</p>
-      <p>Paragraph2</p>
-      <p>Paragraph3</p>
-      <section>
-      <p>Paragraph4</p>
-      </section>
-      <p>Paragraph5</p>
-      
-    </div>
+      <div class="container">
+        <div class="child1">child1</div>
+        <div class="child2">child2</div>
+        <div class="child3">child3</div>
+        <div class="child1">child1</div>
+        <div class="child2">child2</div>
+        <div class="child3">child3</div>
+      </div>
 </body>
 </html>
